added requests to requirements

--- a/settings.ini
+++ b/settings.ini
@@ -20,4 +20,4 @@ title = energynoise
 doc_path = docs
 doc_host = https://AyrtonB.github.io
 doc_baseurl = /EveryNoise-Watch/
-requirements = beautifulsoup4==4.9.3 pandas==1.2.4 typer==0.3.1
+requirements = beautifulsoup4==4.9.3 pandas==1.2.4 typer==0.3.1 requests==2.25.1
