--- a/settings.ini
+++ b/settings.ini
@@ -17,6 +17,7 @@ language = English
 git_url = https://github.com/AyrtonB/EveryNoise-Watch
 lib_path = energynoise
 title = energynoise
+nbs_path = nbs
 doc_path = docs
 doc_host = https://AyrtonB.github.io
 doc_baseurl = /EveryNoise-Watch/
