corrected module name

--- a/settings.ini
+++ b/settings.ini
@@ -1,6 +1,6 @@
 [DEFAULT]
 host = github
-lib_name = energynoise
+lib_name = everynoise
 repo_name = EveryNoise-Watch
 company_name = AyrtonB
 user = EveryNoise-Watch
@@ -15,8 +15,8 @@ min_python = 3.6
 audience = Developers
 language = English
 git_url = https://github.com/AyrtonB/EveryNoise-Watch
-lib_path = energynoise
-title = energynoise
+lib_path = everynoise
+title = everynoise
 nbs_path = nbs
 doc_path = docs
 doc_host = https://AyrtonB.github.io
